@@ -13,6 +13,7 @@
 - Update DIDL license and change coding style to DSpace standard
 
 (Stuart Lewis)
+- SF Patch #1602185 for bug #1589902 Duplicate [field] checking error [on input-forms.xml]
 - SF Patch #1598323 Support stats from both 1.3 and 1.4
 - SF Patch #1594208 for bug #1592984 Date comparisons strip time in org.dspace.harvest.Harvest
 - SF Patch #1596113 [dspace]/bin/update-handle-prefix needs to index-all
